FIxed warning of deprecrated constructor.